gcc/testsuite/rust/rustc/ui/macros/macro-path-prelude-fail-1_dg.rs
mod m {
    fn check() {
        Vec::clone!(); // { dg-error ".E0433." "" { target *-*-* } }
        u8::clone!(); // { dg-error ".E0433." "" { target *-*-* } }
    }
}

fn main() {}

